# bevy_inspector_egui

crates/bevy-inspector-egui/: Cargo.toml
crates/bevy-inspector-egui-derive/: Cargo.toml
crates/bevy_inspector_egui/: Cargo.toml
crates/bevy_inspector_egui_derive/: Cargo.toml
