[package]
name = "bevy-inspector-egui"
version = "0.28.1"
edition = "2021"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Inspector plugin for the bevy game engine"
documentation = "https://docs.rs/bevy-inspector-egui"
keywords = ["bevy", "inspector", "egui", "editor", "reflect"]
categories = [
    "game-development",
    "gui",
    "visualization",
    "development-tools::procedural-macro-helpers",
]

[features]
default = ["bevy_pbr", "bevy_image", "bevy_render", "egui_clipboard"]
bevy_render = ["dep:bevy_render", "dep:bevy_core_pipeline", "bevy_egui/render"]
egui_clipboard = ["bevy_egui/manage_clipboard"]
egui_open_url = ["bevy_egui/open_url"]
highlight_changes = []

[package.metadata.docs.rs]
features = ["winit/x11"]

[dependencies]
winit = { version = "0.30.0", default-features = false }

bevy-inspector-egui-derive = { version = "0.28.0", path = "../bevy-inspector-egui-derive" }
bevy_app = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_asset = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_color = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_core = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_ecs = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_hierarchy = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_log = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_math = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_reflect = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_state = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_time = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_utils = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
bevy_window = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }

bevy_render = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", optional = true }
bevy_core_pipeline = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", optional = true }
bevy_pbr = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", optional = true }
bevy_image = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", optional = true }

egui = "0.29"
bevy_egui = { git = "https://github.com/gehud/bevy_egui.git", branch = "bevy_editor", default-features = false }

bytemuck = "1.16.0"
image = { version = "0.25", default-features = false }
smallvec = "1.10"

fuzzy-matcher = "0.3.7"
disqualified = "1.0.0"

[dev-dependencies]
bevy = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false, features = [
    "x11",
    "bevy_winit",
    "bevy_window",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_core_pipeline",
    "animation",
    "png",
    "zstd",
    "tonemapping_luts",
    "ktx2",
] }
egui_dock = "0.15"
# transform-gizmo-egui = "0.1"
# bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "554649a951689dce66d0d759839b326874e8826f", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
# bevy_framepace = "0.11"


[[example]]
name = "inspector_options"
path = "examples/basic/inspector_options.rs"

[[example]]
name = "custom_type_ui"
path = "examples/basic/custom_type_ui.rs"

[[example]]
name = "resource_inspector_manual"
path = "examples/basic/resource_inspector_manual.rs"

[[example]]
name = "resource_inspector"
path = "examples/quick/resource_inspector.rs"

[[example]]
name = "filter_query_inspector"
path = "examples/quick/filter_query_inspector.rs"

[[example]]
name = "asset_inspector"
path = "examples/quick/asset_inspector.rs"

[[example]]
name = "world_inspector"
path = "examples/quick/world_inspector.rs"

[[example]]
name = "world_inspector_assets"
path = "examples/quick/world_inspector_assets.rs"

[[example]]
name = "state_inspector"
path = "examples/quick/state_inspector.rs"

[[example]]
name = "egui_dock"
path = "examples/integrations/egui_dock.rs"

[[example]]
name = "side_panel"
path = "examples/integrations/side_panel.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(egui_dock_gizmo)'] }
